fix alignment of selectedImg &  collection < 4

--- a/src/components/imageAndThumbnailSlider/ImageAndThumbnailSlider.scss
+++ b/src/components/imageAndThumbnailSlider/ImageAndThumbnailSlider.scss
@@ -17,10 +17,12 @@
 
 		&__item {
 			position: relative;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 
 			img {
 				height: 530px;
-				width: 530px;
 				max-height: 530px;
 				max-width: 530px;
 			}
@@ -62,12 +64,22 @@
 		justify-content: flex-start;
 		flex-flow: row wrap;
 		gap: 10px;
+		height: 100%;
+		width: 100%;
 
 		&__item {
+			display: flex;
+			justify-content: center;
+			align-items: center;
 			height: 120px;
-			width: 120px;
+			min-width: 120px;
 			padding: 2px;
 			cursor: pointer;
+
+			img {
+				height: 100%;
+				width: auto;
+			}
 
 			&__selected {
 				height: 120px;
